--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -6,8 +6,7 @@ edition.workspace = true
 authors.workspace = true
 
 [dependencies]
-eql_common = { workspace = true }
-eql_interpreter = { workspace = true }
+eql_core = { workspace = true }
 clap = { version = "4.5.7", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tabled = "0.15.0"
