--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "eql_core"
-version.workspace = true
+version = "0.1.1"
 rust-version.workspace = true
 edition.workspace = true
 authors.workspace = true
