--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 alloy = { version = "0.2", features = ["std", "contract", "provider-http", "network", "rpc-types"] }
 pest = "2.7.10"
 pest_derive = "2.6"
-tokio = { version = "1", features = ["macros"] }
+tokio = { version = "1", features = ["macros", "rt"] }
 serde = { version = "1" }
 serde_json = { version = "1" }
 serde_with = "1.14"
