--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -10,7 +10,8 @@ repository = "https://github.com/iankressin/eql"
 readme = "README.md"
 
 [dependencies]
-alloy = { version = "0.2", features = ["std", "contract", "provider-http", "network", "rpc-types"] }
+alloy = { version = "0.6.4", features = ["std", "contract", "provider-http", "network", "rpc-types"] }
+alloy-eip7702 = "0.4.1"
 pest = "2.7.10"
 pest_derive = "2.6"
 tokio = { version = "1", features = ["macros", "rt"] }
